large amount of layout updates

--- a/projects/connectingflight.html
+++ b/projects/connectingflight.html
@@ -34,47 +34,64 @@
     <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" id="exampleModalLabel">AT&T Connecting Flight</h1>
-                <a class="btn-close" href="/index.html"></a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="col-12 col-lg-10 d-flex align-items-center header-content">
+                        <h1 class="modal-title" id="exampleModalLabel">AT&T Connecting Flight</h1>
+                        <a class="btn-close" href="/index.html"></a>
+                    </div>
+                </div>
             </div>
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
-                    <div class="row mt-2 mb-5">
-                        <h2 class="modal-subhead">Problem</h2>
-                        <div class="col-12">
-                            Entertainment services on flights are notoriously unreliable, difficult to use, and
-                            expensive. What if we could offer an in-flight connectivity service as convenient as the
-                            guest network at a coffee shop with the ability to access your preferred entertainment
-                            options all while over 30,000 feet in the air?
-                        </div>
-                    </div>
-                    <div class="row mb-5">
-                        <h2 class="modal-subhead">My Role</h2>
-                        <div class="col-4">
-                            <ul>
-                                <li>Research</li>
-                                <li>Wireframing</li>
-                                <li>UX/UI Design</li>
-                                <li>Prototyping</li>
-                                <li>Art Direction</li>
-                            </ul>
-                        </div>
-                        <div class="col-8">
-                            My role was to work closely with our video and product teams to research, concept, and
-                            design an experience communicating the product vision to key stakeholders while leading up
-                            to larger business and strategic investment. I was responsible for designing the core facets
-                            of the service including signup and purchasing experiences, flight time entertainment
-                            optimization interactions, and an integrated flight tracker.
-                        </div>
-                    </div>
-                    <div class="row mb-5">
-                        <h2 class="modal-subhead">Solution</h2>
-                        <div class="col-12">
-                            My team and I designed an end-to-end service optimized around making entertainment and
-                            internet service purchasing within time-boxed flight periods as frictionless as possible.
-                            Being the largest carrier in the industry AT&T was primed to offer an integrated connection
-                            option for existing wireless and wireline customers while also capitalizing on an
-                            underdeveloped in-flight connectivity space ignored by traditional mobile providers.
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="col-12 col-lg-8">
+                            <div class="row mt-5 mb-5">
+                                <h2 class="modal-subhead">Problem</h2>
+                                <div class="col-12">
+                                    Entertainment services on flights are notoriously unreliable, difficult to use, and
+                                    expensive. What if we could offer an in-flight connectivity service as convenient as
+                                    the
+                                    guest network at a coffee shop with the ability to access your preferred
+                                    entertainment
+                                    options all while over 30,000 feet in the air?
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <h2 class="modal-subhead">My Role</h2>
+                                <div class="col-4">
+                                    <ul>
+                                        <li>Research</li>
+                                        <li>Wireframing</li>
+                                        <li>UX/UI Design</li>
+                                        <li>Prototyping</li>
+                                        <li>Art Direction</li>
+                                    </ul>
+                                </div>
+                                <div class="col-8">
+                                    My role was to work closely with our video and product teams to research, concept,
+                                    and
+                                    design an experience communicating the product vision to key stakeholders while
+                                    leading up
+                                    to larger business and strategic investment. I was responsible for designing the
+                                    core facets
+                                    of the service including signup and purchasing experiences, flight time
+                                    entertainment
+                                    optimization interactions, and an integrated flight tracker.
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <h2 class="modal-subhead">Solution</h2>
+                                <div class="col-12">
+                                    My team and I designed an end-to-end service optimized around making entertainment
+                                    and
+                                    internet service purchasing within time-boxed flight periods as frictionless as
+                                    possible.
+                                    Being the largest carrier in the industry AT&T was primed to offer an integrated
+                                    connection
+                                    option for existing wireless and wireline customers while also capitalizing on an
+                                    underdeveloped in-flight connectivity space ignored by traditional mobile providers.
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center connectingflight-image-container-1">
@@ -137,8 +154,11 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a class="btn-secondary" href="/index.html">Close
-                    Project</a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="d-flex align-items-center footer-content">
+                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
