--- a/projects/laysstaxwebsite.html
+++ b/projects/laysstaxwebsite.html
@@ -34,32 +34,43 @@
     <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" id="exampleModalLabel">Lay’s Stax Website</h1>
-                <a class="btn-close" href="/index.html"></a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="col-12 d-flex align-items-center header-content">
+                        <h1 class="modal-title" id="exampleModalLabel">Lay’s Stax Website</h1>
+                        <a class="btn-close" href="/index.html"></a>
+                    </div>
+                </div>
             </div>
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
-                    <div class="row mt-2 mb-5">
-                        <h2 class="modal-subhead">Challenge</h2>
-                        <div class="col-12">
-                            Create a standalone site for the Lay’s Stax brand incorporating engaging lifestyle collages
-                            with a path to purchase through available retailers.
-                        </div>
-                    </div>
-                    <div class="row mb-5">
-                        <h2 class="modal-subhead">My Role</h2>
-                        <div class="col-4">
-                            <ul>
-                                <li>Concepting</li>
-                                <li>Content Strategy</li>
-                                <li>Art Direction</li>
-                                <li>UX/UI Design</li>
-                            </ul>
-                        </div>
-                        <div class="col-8">
-                            My role was to design the end-to-end customer experience, concept lifestyle collages
-                            associated with each product, and create the final production image assets to be handed off
-                            to development partners. I was also involved in the content creation throughout the site.
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="col-12 col-lg-8">
+                            <div class="row mt-5 mb-5">
+                                <h2 class="modal-subhead">Challenge</h2>
+                                <div class="col-12">
+                                    Create a standalone site for the Lay’s Stax brand incorporating engaging lifestyle
+                                    collages
+                                    with a path to purchase through available retailers.
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <h2 class="modal-subhead">My Role</h2>
+                                <div class="col-4">
+                                    <ul>
+                                        <li>Concepting</li>
+                                        <li>Content Strategy</li>
+                                        <li>Art Direction</li>
+                                        <li>UX/UI Design</li>
+                                    </ul>
+                                </div>
+                                <div class="col-8">
+                                    My role was to design the end-to-end customer experience, concept lifestyle collages
+                                    associated with each product, and create the final production image assets to be
+                                    handed off
+                                    to development partners. I was also involved in the content creation throughout the
+                                    site.
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
@@ -75,10 +86,10 @@
                         <div class="col-12 col-md-10 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/stax-product1.png">
                         </div>
-                        <div class="col-12 col-md-10 d-flex flex-column">
+                        <div class="col-12 col-md-5 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/stax-product2.png">
                         </div>
-                        <div class="col-12 col-md-10 d-flex flex-column">
+                        <div class="col-12 col-md-5 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/stax-product3.png">
                         </div>
                     </div>
@@ -92,8 +103,11 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a class="btn-secondary" href="/index.html">Close
-                    Project</a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="d-flex align-items-center footer-content">
+                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
