--- a/projects/monsterproject.html
+++ b/projects/monsterproject.html
@@ -34,30 +34,42 @@
     <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" id="exampleModalLabel">The Monster Project</h1>
-                <a class="btn-close" href="/index.html"></a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="col-12 col-lg-10 d-flex align-items-center header-content">
+                        <h1 class="modal-title" id="exampleModalLabel">The Monster Project</h1>
+                        <a class="btn-close" href="/index.html"></a>
+                    </div>
+                </div>
             </div>
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
-                    <div class="row mt-2 mb-5">
-                        <h2 class="modal-subhead">Challenge</h2>
-                        <div class="col-12">
-                            Inspire kids.
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="col-12 col-lg-8">
+                            <div class="row mt-5 mb-5">
+                                <h2 class="modal-subhead">Challenge</h2>
+                                <div class="col-12">
+                                    Inspire kids.
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <h2 class="modal-subhead">Solution</h2>
+                                <p class="col-12">
+                                    For the past few years I’ve organized this incredibly rewarding project for my
+                                    wife’s 1st
+                                    grade
+                                    students.
+                                    It’s called The Monster Project.
+                                </p>
+                                <p>
+                                    Each year, the responses we get from the children are not only amazing, but
+                                    incredibly
+                                    moving for me and everyone involved. These range from uncontrollable happiness to
+                                    shrieking
+                                    excitement. These reactions are sparked by presenting artistic interpretations like
+                                    this:
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mb-3">
-                        <h2 class="modal-subhead">Solution</h2>
-                        <p class="col-12">
-                            For the past few years I’ve organized this incredibly rewarding project for my wife’s 1st
-                            grade
-                            students.
-                            It’s called The Monster Project.
-                        </p>
-                        <p>
-                            Each year, the responses we get from the children are not only amazing, but incredibly
-                            moving for me and everyone involved. These range from uncontrollable happiness to shrieking
-                            excitement. These reactions are sparked by presenting artistic interpretations like this:
-                        </p>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
@@ -74,36 +86,49 @@
                                 src="/images/project-images/monsterproject/MID-Addie-Abowd2.png">
                         </div>
                     </div>
-                    <div class="row mt-5 mb-4">
-                        <p class="col-12">
-                            I started doing this project after my wife read about the amazing group of creatives behind
-                            the <a href="https://themonsterproject.org/" target="_blank"
-                                rel="noopener noreferrer">Monster Project</a>. The project was created
-                            with the simple mission of
-                            showing students the
-                            power of their own creativity. The way it works is first, students create a monster using
-                            their
-                            imagination. It is then given to a professional artist who reimagines it in their own style.
-                            The work is
-                            presented back to the students and that is where the real magic happens.
-                        </p>
-                        <p>
-                            I’ve worked as a professional designer for over a decade and have gotten to know many many
-                            talented creatives. Realizing this, my wife asked if I would rally them together and start
-                            doing this project for students at her elementary school. I’m very happy to say
-                            that over 500 students later, the impact we’ve had on the kids and artists involved is
-                            better than I ever could have
-                            imagined.
-                        </p>
-                        <p>
-                            Year after year, around 100 artists across my network volunteer their time to be a part of
-                            this project. Huge shout out to everyone I’ve had the pleasure of collaborating with because
-                            without each and every one of them, this would not be possible.
-                        </p>
-                        <p>
-                            The following are some of the artistic contributions I’ve made to our project over the
-                            years.
-                        </p>
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="col-12 col-lg-8">
+                            <div class="row mt-5 mb-5">
+                                <p class="col-12">
+                                    I started doing this project after my wife read about the amazing group of creatives
+                                    behind
+                                    the <a href="https://themonsterproject.org/" target="_blank"
+                                        rel="noopener noreferrer">Monster Project</a>. The project was created
+                                    with the simple mission of
+                                    showing students the
+                                    power of their own creativity. The way it works is first, students create a monster
+                                    using
+                                    their
+                                    imagination. It is then given to a professional artist who reimagines it in their
+                                    own style.
+                                    The work is
+                                    presented back to the students and that is where the real magic happens.
+                                </p>
+                                <p>
+                                    I’ve worked as a professional designer for over a decade and have gotten to know
+                                    many many
+                                    talented creatives. Realizing this, my wife asked if I would rally them together and
+                                    start
+                                    doing this project for students at her elementary school. I’m very happy to say
+                                    that over 500 students later, the impact we’ve had on the kids and artists involved
+                                    is
+                                    better than I ever could have
+                                    imagined.
+                                </p>
+                                <p>
+                                    Year after year, around 100 artists across my network volunteer their time to be a
+                                    part of
+                                    this project. Huge shout out to everyone I’ve had the pleasure of collaborating with
+                                    because
+                                    without each and every one of them, this would not be possible.
+                                </p>
+                                <p>
+                                    The following are some of the artistic contributions I’ve made to our project over
+                                    the
+                                    years.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
@@ -283,19 +308,27 @@
                                 src="/images/project-images/monsterproject/MAR-Nicanor-Abowd2.png">
                         </div>
                     </div>
-                    <div class="row my-5">
-                        <p class="col-12">
-                            If you love what you see here and would like to see more of it in the world please consider
-                            a donation in support of the <a href="https://themonsterproject.org/faq" target="_blank"
-                                rel="noopener noreferrer">Monster
-                                Project</a>.
-                        </p>
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="col-12 col-lg-8">
+                            <div class="row my-5">
+                                <p class="col-12">
+                                    If you love what you see here and would like to see more of it in the world please
+                                    consider
+                                    a donation in support of the <a href="https://themonsterproject.org/faq"
+                                        target="_blank" rel="noopener noreferrer">Monster
+                                        Project</a>.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <a class="btn-secondary" href="/index.html">Close
-                    Project</a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="d-flex align-items-center footer-content">
+                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
