--- a/projects/shoppingmobileapp.html
+++ b/projects/shoppingmobileapp.html
@@ -34,67 +34,113 @@
     <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" id="exampleModalLabel">Wikibuy Mobile App Redesign</h1>
-                <a class="btn-close" href="/index.html"></a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="col-12 col-lg-10 d-flex align-items-center header-content">
+                        <h1 class="modal-title">Wikibuy Mobile App Redesign</h1>
+                        <a class="btn-close" href="/index.html"></a>
+                    </div>
+                </div>
             </div>
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
-                    <div class="row mt-2 mb-5">
-                        <h2 class="modal-subhead">Problem</h2>
-                        <div class="col-12">
-                            Capital One acquired Wikibuy in fall 2018 and I was brought on to lead the design team while
-                            working to integrate and improve the company’s product offering. The
-                            existing Wikibuy mobile application had issues with usability, stability,
-                            new
-                            user attrition, and a lack of overall revenue generation for our business. My
-                            design
-                            team and I were tasked with shoring up the customer experience, improving
-                            overall
-                            engagement, and increasing downstream effects to potential revenue.
-                        </div>
-                    </div>
-                    <div class="row mb-5">
-                        <h2 class="modal-subhead">My Role</h2>
-                        <div class="col-4">
-                            <ul>
-                                <li>Design Management</li>
-                                <li>Research</li>
-                                <li>Wireframing</li>
-                                <li>UX/UI Design</li>
-                                <li>Prototyping</li>
-                                <li>Design System Development</li>
-                            </ul>
-                        </div>
-                        <div class="col-8">
-                            I worked closely with our product and research team to identify the
-                            largest opportunities for improving the overall customer experience and increase
-                            mobile purchases through our app. I led my design team into creating a series
-                            of
-                            viable solutions for improved core user flows and net new functionality that could be
-                            implemented on shortened delivery timelines with our mobile engineering team.
-                        </div>
-                    </div>
-                    <div class="row mb-5">
-                        <h2 class="modal-subhead">Solution</h2>
-                        <div class="col-12">
-                            <p>
-                                After conducting a series of interviews with our customers, analyzing app
-                                usage,
-                                and examining performance data we identified the largest pain points and opportunities
-                                to
-                                improve the overall experience. We then redesigned a set of core flows within the app
-                                including a
-                                completely new personalized home page, improved search experience, new onboarding flow
-                                with
-                                push notification enrollment, and a redesigned price comparison experience.
-                            </p>
-                            <p>
-                                We also designed
-                                and built a new in-app shopping flow that allowed us to integrate our flagship Automatic
-                                Coupon service. This gave the app full feature parity with our core desktop browser
-                                extension product and gave customers on average 30% more savings when shopping through
-                                the app.
-                            </p>
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="col-12 col-lg-8">
+                            <div class="row mt-5 mb-5">
+                                <h2 class="modal-subhead">Problem</h2>
+                                <div class="col-12">
+                                    Capital One acquired Wikibuy in fall 2018 and I was brought on to lead the design
+                                    team
+                                    while
+                                    working to integrate and improve the company’s product offering. The
+                                    existing Wikibuy mobile application had issues with usability, stability,
+                                    new
+                                    user attrition, and a lack of overall revenue generation for our business. My
+                                    design
+                                    team and I were tasked with shoring up the customer experience, improving
+                                    overall
+                                    engagement, and increasing downstream effects to potential revenue.
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <h2 class="modal-subhead">My Role</h2>
+                                <div class="col-4">
+                                    <ul>
+                                        <li>Design Management</li>
+                                        <li>Research</li>
+                                        <li>Wireframing</li>
+                                        <li>UX/UI Design</li>
+                                        <li>Prototyping</li>
+                                        <li>Design System Development</li>
+                                    </ul>
+                                </div>
+                                <div class="col-8">
+                                    I worked closely with our product and research team to identify the
+                                    largest opportunities for improving the overall customer experience and increase
+                                    mobile purchases through our app. I led my design team into creating a series
+                                    of
+                                    viable solutions for improved core user flows and net new functionality that could
+                                    be
+                                    implemented on shortened delivery timelines with our mobile engineering team.
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <h2 class="modal-subhead">Solution</h2>
+                                <div class="col-12">
+                                    <p>
+                                        After conducting a series of interviews with our customers, analyzing app
+                                        usage,
+                                        and examining performance data we identified the largest pain points and
+                                        opportunities
+                                        to
+                                        improve the overall experience. We then redesigned a set of core flows within
+                                        the
+                                        app
+                                        including a
+                                        completely new personalized home page, improved search experience, new
+                                        onboarding
+                                        flow
+                                        with
+                                        push notification enrollment, and a redesigned price comparison experience.
+                                    </p>
+                                    <p>
+                                        We also designed
+                                        and built a new in-app shopping flow that allowed us to integrate our flagship
+                                        Automatic
+                                        Coupon service. This gave the app full feature parity with our core desktop
+                                        browser
+                                        extension product and gave customers on average 30% more savings when shopping
+                                        through
+                                        the app.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <h2 class="modal-subhead">Results</h2>
+                                <div class="col-12">
+                                    <ul>
+                                        <li class="mb-2">Our new homepage design led to a 25% increase in purchases
+                                            year-over-year over the previous design.
+                                        </li>
+                                        <li class="mb-2">The redesigned price comparison experience increased purchases
+                                            by
+                                            around
+                                            40%
+                                            year-over-year.</li>
+                                        <li class="mb-2">The app store rating increased from 3.3 stars before the
+                                            redesign to
+                                            4.7 stars after
+                                            core experience enhancements were completed.</li>
+                                        <li class="mb-2">We successfully rebranded from Wikibuy to the new <a
+                                                href="https://www.capitalone.com/learn-grow/money-management/capital-one-shopping/"
+                                                target="_blank" rel="noopener noreferrer">Capital One
+                                                Shopping</a> brand in time for a <a
+                                                href="https://www.ispot.tv/ad/tfd8/capital-one-shopping-holiday-late-night-feat-samuel-l-jackson-john-travolta"
+                                                target="_blank" rel="noopener noreferrer">national advertising launch in
+                                                Fall 2020</a>.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
@@ -201,42 +247,20 @@
                         <img class="col-6 col-md-3" src="/images/project-images/shopping-checkout3.png">
                         <img class="col-6 col-md-3" src="/images/project-images/shopping-checkout4.png">
                     </div>
-                    <div class="row mb-5">
-                        <h2 class="modal-subhead">Results</h2>
-                        <div class="col-12">
-                            <ul>
-                                <li class="mb-2">Our new homepage design led to a 25% increase in purchases
-                                    year-over-year over the previous design.
-                                </li>
-                                <li class="mb-2">The redesigned price comparison experience increased purchases by
-                                    around
-                                    40%
-                                    year-over-year.</li>
-                                <li class="mb-2">The app store rating increased from 3.3 stars before the redesign to
-                                    4.7 stars after
-                                    core experience enhancements were completed.</li>
-                                <li class="mb-2">We successfully rebranded from Wikibuy to the new <a
-                                        href="https://www.capitalone.com/learn-grow/money-management/capital-one-shopping/"
-                                        target="_blank" rel="noopener noreferrer">Capital One
-                                        Shopping</a> brand in time for a <a
-                                        href="https://www.ispot.tv/ad/tfd8/capital-one-shopping-holiday-late-night-feat-samuel-l-jackson-john-travolta"
-                                        target="_blank" rel="noopener noreferrer">national advertising launch in
-                                        Fall 2020</a>.
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <a class="btn-primary" href="https://apps.apple.com/us/app/capital-one-shopping/id1089294040"
-                    target="_blank" rel="noopener noreferrer">Download
-                    for iOS</a>
-                <a class="btn-primary"
-                    href="https://play.google.com/store/apps/details?id=com.wikibuy.prod.main&hl=en_US&gl=US"
-                    target="_blank" rel="noopener noreferrer">Download for Android</a>
-                <a class="btn-secondary" href="/index.html">Close
-                    Project</a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="d-flex align-items-center footer-content">
+                        <a class="btn-primary" href="https://apps.apple.com/us/app/capital-one-shopping/id1089294040"
+                            target="_blank" rel="noopener noreferrer">Download
+                            for iOS</a>
+                        <a class="btn-primary mx-3"
+                            href="https://play.google.com/store/apps/details?id=com.wikibuy.prod.main&hl=en_US&gl=US"
+                            target="_blank" rel="noopener noreferrer">Download for Android</a>
+                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
