--- a/projects/skylanders3Dadventure.html
+++ b/projects/skylanders3Dadventure.html
@@ -34,62 +34,99 @@
     <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" id="exampleModalLabel">Skylanders 3D Adventure</h1>
-                <a class="btn-close" href="/index.html"></a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="col-12 col-lg-10 d-flex align-items-center header-content">
+                        <h1 class="modal-title" id="exampleModalLabel">Skylanders 3D Adventure</h1>
+                        <a class="btn-close" href="/index.html"></a>
+                    </div>
+                </div>
             </div>
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
-                    <div class="row mt-2 mb-5">
-                        <h2 class="modal-subhead">Problem</h2>
-                        <div class="col-12 mb-3">
-                            For parents with young children, keeping them entertained while shopping for groceries can
-                            be a struggle.
-                        </div>
-                        <div class="col-12">
-                            <ul>
-                                <li class="mb-3">
-                                    How might we use the partnership between Frito-Lay and Activision to create an
-                                    in-store
-                                    scavenger hunt where kids and their parents will be able to interact with Skylander
-                                    characters in physical spaces?
-                                </li>
-                                <li class="mb-3">
-                                    How might we transform the retailer experience while encouraging return visits and
-                                    building baskets for retailers that engage in the program?
-                                </li>
-                                <li>
-                                    How might we realize a $1.5MM incremental opportunity from additional displays using
-                                    the
-                                    Frito-Lay and Activision partnership?
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="row mb-5">
-                        <h2 class="modal-subhead">My Role</h2>
-                        <div class="col-4">
-                            <ul>
-                                <li>Research</li>
-                                <li>Art Direction</li>
-                                <li>UX/UI Design</li>
-                                <li>Content Strategy</li>
-                            </ul>
-                        </div>
-                        <div class="col-8">
-                            I worked collaboratively with another Art Director to develop an end-to-end interactive
-                            in-store experience. My role included initial research and concept development, designing
-                            in-store interactive displays and a companion mobile app (iOS and Android), and creating
-                            associated marketing materials for retail partners.
-                        </div>
-                    </div>
-                    <div class="row mb-5">
-                        <h2 class="modal-subhead">Solution</h2>
-                        <div class="col-12">
-                            In partnership with Frito-Lay and Activision, my team developed a branded scavenger hunt
-                            using a mobile
-                            app and a series of in-store product displays that could be scanned to generate 3D
-                            interactive characters from the game. Shoppers could take photos with the AR characters to
-                            win instant prizes and coupons.
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="col-12 col-lg-8">
+                            <div class="row mt-2 mb-5">
+                                <h2 class="modal-subhead">Problem</h2>
+                                <div class="col-12 mb-3">
+                                    For parents with young children, keeping them entertained while shopping for
+                                    groceries can
+                                    be a struggle.
+                                </div>
+                                <div class="col-12">
+                                    <ul>
+                                        <li class="mb-3">
+                                            How might we use the partnership between Frito-Lay and Activision to create
+                                            an
+                                            in-store
+                                            scavenger hunt where kids and their parents will be able to interact with
+                                            Skylander
+                                            characters in physical spaces?
+                                        </li>
+                                        <li class="mb-3">
+                                            How might we transform the retailer experience while encouraging return
+                                            visits and
+                                            building baskets for retailers that engage in the program?
+                                        </li>
+                                        <li>
+                                            How might we realize a $1.5MM incremental opportunity from additional
+                                            displays using
+                                            the
+                                            Frito-Lay and Activision partnership?
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <h2 class="modal-subhead">My Role</h2>
+                                <div class="col-4">
+                                    <ul>
+                                        <li>Research</li>
+                                        <li>Art Direction</li>
+                                        <li>UX/UI Design</li>
+                                        <li>Content Strategy</li>
+                                    </ul>
+                                </div>
+                                <div class="col-8">
+                                    I worked collaboratively with another Art Director to develop an end-to-end
+                                    interactive
+                                    in-store experience. My role included initial research and concept development,
+                                    designing
+                                    in-store interactive displays and a companion mobile app (iOS and Android), and
+                                    creating
+                                    associated marketing materials for retail partners.
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <h2 class="modal-subhead">Solution</h2>
+                                <div class="col-12">
+                                    In partnership with Frito-Lay and Activision, my team developed a branded scavenger
+                                    hunt
+                                    using a mobile
+                                    app and a series of in-store product displays that could be scanned to generate 3D
+                                    interactive characters from the game. Shoppers could take photos with the AR
+                                    characters to
+                                    win instant prizes and coupons.
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <h2 class="modal-subhead">Resuts</h2>
+                                <div class="col-12">
+                                    <ul>
+                                        <li class="mb-3">
+                                            Over 5,000 displays ordered
+                                        </li>
+                                        <li class="mb-3">
+                                            Over 17M active users and 53M pictures taken through app experience
+                                        </li>
+                                        <li class="mb-3">
+                                            84% Click-through Rate for **CHIP SMS download (Baseline is 67%)
+                                        </li>
+                                        <li>
+                                            Drove $4.5MM incremental dollars (200% increase over a target of $1.5MM)
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center skylanders-image-container">
@@ -140,30 +177,14 @@
                             <img class="col-12" src="/images/project-images/skylanders3Dadventure6.png">
                         </div>
                     </div>
-                    <div class="row mb-5">
-                        <h2 class="modal-subhead">Resuts</h2>
-                        <div class="col-12">
-                            <ul>
-                                <li class="mb-3">
-                                    Over 5,000 displays ordered
-                                </li>
-                                <li class="mb-3">
-                                    Over 17M active users and 53M pictures taken through app experience
-                                </li>
-                                <li class="mb-3">
-                                    84% Click-through Rate for **CHIP SMS download (Baseline is 67%)
-                                </li>
-                                <li>
-                                    Drove $4.5MM incremental dollars (200% increase over a target of $1.5MM)
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <a class="btn-secondary" href="/index.html">Close
-                    Project</a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="d-flex align-items-center footer-content">
+                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
