--- a/projects/generatormakerspace.html
+++ b/projects/generatormakerspace.html
@@ -34,33 +34,45 @@
     <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" id="exampleModalLabel">The Generator Makerspace</h1>
-                <a class="btn-close" href="/index.html"></a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="col-12 col-lg-10 d-flex align-items-center header-content">
+                        <h1 class="modal-title" id="exampleModalLabel">The Generator Makerspace</h1>
+                        <a class="btn-close" href="/index.html"></a>
+                    </div>
+                </div>
             </div>
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
-                    <div class="row mt-2 mb-5">
-                        <h2 class="modal-subhead">Challenge</h2>
-                        <div class="col-12">
-                            Create a brand and companion mobile app for Capital One’s Generator Makerspace that allows
-                            makers to
-                            view available equipment, access training resources and supply inventory, view remote live
-                            feeds from the 3D printers, and play the interactive circuit breaker game, competing for the
-                            top score and ultimate bragging rights.
-                        </div>
-                    </div>
-                    <div class="row mb-3">
-                        <h2 class="modal-subhead">My Role</h2>
-                        <div class="col-4">
-                            <ul>
-                                <li>UX/UI Design</li>
-                                <li>Content Strategy</li>
-                                <li>Game Design</li>
-                            </ul>
-                        </div>
-                        <div class="col-8">
-                            I designed branding for the space and an end-to-end companion app experience including the
-                            core user experience, UI/UX design, and interactive game.
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="col-12 col-lg-8">
+                            <div class="row mt-5 mb-5">
+                                <h2 class="modal-subhead">Challenge</h2>
+                                <div class="col-12">
+                                    Create a brand and companion mobile app for Capital One’s Generator Makerspace that
+                                    allows
+                                    makers to
+                                    view available equipment, access training resources and supply inventory, view
+                                    remote live
+                                    feeds from the 3D printers, and play the interactive circuit breaker game, competing
+                                    for the
+                                    top score and ultimate bragging rights.
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <h2 class="modal-subhead">My Role</h2>
+                                <div class="col-4">
+                                    <ul>
+                                        <li>UX/UI Design</li>
+                                        <li>Content Strategy</li>
+                                        <li>Game Design</li>
+                                    </ul>
+                                </div>
+                                <div class="col-8">
+                                    I designed branding for the space and an end-to-end companion app experience
+                                    including the
+                                    core user experience, UI/UX design, and interactive game.
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="row py-3 d-flex justify-content-center generator-image-container4">
@@ -148,8 +160,11 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a class="btn-secondary" href="/index.html">Close
-                    Project</a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="d-flex align-items-center footer-content">
+                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
