--- a/projects/thankyou.html
+++ b/projects/thankyou.html
@@ -33,14 +33,10 @@
 <body>
     <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title" id="exampleModalLabel"></h1>
-                <a class="btn-close" href="/index.html"></a>
-            </div>
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
                     <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
-                        <h1 class="col-12 text-center mt-0 mb-5">Thanks for being awesome!</h1>
+                        <h1 class="col-12 text-center mt-0 mb-3">Well, That Was Fun!</h1>
                         <p class="col-12 text-center mt-0">
                             Thank you so much for reaching out. I'm thrilled to hear from you and will be in touch soon.
                         </p>
@@ -56,8 +52,6 @@
                         <a class="btn-secondary col-12 col-md-4 text-center" href="/index.html"> Back to Homepage</a>
                     </div>
                 </div>
-            </div>
-            <div class="modal-footer">
             </div>
         </div>
     </div>
