--- a/projects/visualdesign.html
+++ b/projects/visualdesign.html
@@ -34,12 +34,16 @@
     <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" id="exampleModalLabel">Select Visual Design & Branding</h1>
-                <a class="btn-close" href="/index.html"></a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="col-12 col-lg-10 d-flex align-items-center header-content">
+                        <h1 class="modal-title" id="exampleModalLabel">Select Visual Design & Branding</h1>
+                        <a class="btn-close" href="/index.html"></a>
+                    </div>
+                </div>
             </div>
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
-                    <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                    <div class="row py-5 px-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Platform Launch Posters</h2>
                         <p class="col-12 text-center mt-0 mb-4">
                             Concepted and designed a series of posters advertising the launch of the Enterprise Account
@@ -68,7 +72,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                    <div class="row py-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Design Rumble Logo</h2>
                         <p class="col-12 text-center mt-0 mb-3">
                             Concepted and designed a logo for a monthly design offsite event focused on skill building
@@ -92,7 +96,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                    <div class="row py-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">C3 Summit Event Design</h2>
                         <p class="col-12 text-center mt-0 mb-3">
                             Concepted and created event branding for the annual Capital One Collaborative Code Community
@@ -153,7 +157,7 @@
                         </div>
 
                     </div>
-                    <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                    <div class="row py-5 px-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Doritos Displays and Products</h2>
                         <p class="col-12 text-center mt-0 mb-0">
                             Concepted and designed in-store displays for the Doritos brand. The requirements for this
@@ -175,7 +179,7 @@
                             <img class="col-4" src="/images/project-images/visualdesign/dor-product3.png">
                         </div>
                     </div>
-                    <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                    <div class="row py-5 px-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Billion Dollar Bracket Promotion</h2>
                         <p class="col-12 text-center mt-0 mb-4">
                             Concepted and designed promotion logo and in-store display for a partnership between
@@ -188,7 +192,7 @@
                             <img src="/images/project-images/visualdesign/UL-BDB2.png">
                         </div>
                     </div>
-                    <div class="row py-5 px-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                    <div class="row py-5 px-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Lay’s In-Store Displays</h2>
                         <p class="col-12 text-center mt-0 mb-4">
                             Concepted and designed themed in-store product displays for the Lay’s brand. These concepts
@@ -201,7 +205,7 @@
                             <img class="image-shadow" src="/images/project-images/visualdesign/lays-display1.png">
                         </div>
                     </div>
-                    <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
+                    <div class="row py-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Agile Release Train Logo</h2>
                         <p class="col-12 text-center mt-0 mb-4">
                             Design a logo for a development team with the requirement of incorporating a train and a
@@ -215,8 +219,11 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a class="btn-secondary" href="/index.html">Close
-                    Project</a>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="d-flex align-items-center footer-content">
+                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
